# stembot_software

./: .gitignore  DOC.md  README.md  STEMbot-driver.py  esc-test.py  esc-test.py.save  go.py  maestro.py  motor-test.py  pi-driver  pi-driver-pololu.py  pi-driver-updated.py  pi-driver.py  pi@192.168.1.112  pololu-test.py  ps3-driver  ps3-driver.py  pwm-config  pwm-server.js  setup.sh  start  stembot.service  stembot_names.txt
OldCode/: maestro.py  reset-cam
gamepad2udp/: gamepad2udp.pde
raspberry_pi/: ps3-driver.py
src/stembot/: CMakeLists.txt  package.xml
src/stembot/launch/: stem.launch  stem.launch.py
src/stembot/scripts/: stembot_driver.py  stembot_driver_old.py
stembot_description/: CMakeLists.txt  package.xml
stembot_description/launch/: stembot_rviz.launch
stembot_description/urdf/: control.gazebo.xacro  frame.urdf.xacro  housing.urdf.xacro  make_stembot  material.gazebo.xacro  material.urdf.xacro  properties.urdf.xacro  rods.urdf.xacro  stembot.urdf  stembot.urdf.xacro
stembot_gazebo/: CMakeLists.txt  package.xml
stembot_gazebo/launch/: stembot_gazebo.launch
stembot_gazebo/src/: stembot_gazebo.cpp
stembot_gazebo/worlds/: stembot.world
stembot_teleop/: CMakeLists.txt  package.xml
stembot_teleop/src/: stembot_teleop.cpp
