<?xml version="1.0"?>
<package>
  <name>stembot_description</name>
  <version>0.2.0</version>
  <description>Description of OSU's STEMbot.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/stembot</url>

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>liburdfdom-tools</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
